--- a/AccountManager/MainWindow.xaml
+++ b/AccountManager/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="AccountManager.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CHỦ ĐỀ 3" Height="350" Width="525">
+        Title="nguyen duc thinh" Height="350" Width="525">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
